# HelloOccStepToH5

./: CMakeLists.txt  HelloOccStepToH5.code-workspace  HelloOccStepToH5.h  WriteStepAttributeHdf5.cpp  build_writestepattrh5.sh  run.sh
ai/: gem_STEP_Attributes_to_HDF5.gemini  gem_hdf5_variable_length_integer_array_dataset.cpp  gem_occ_read_shape_attributes_in_step.cpp  gpt_step_attr_to_hdf5_using_occ.cpp
wiki/: gem_STEP_Attributes_to_HDF5.gemini  gem_hdf5_3d_dataset_read_write.cpp  gem_hdf5_define_data_write.cpp  gem_hdf5_overwrite_or_append_existing_dataset.cpp  gem_how_to_get_product_info.cpp  gem_occ_read_shape_attributes_in_step.cpp  gem_occ_read_shape_attributes_in_step2.cpp  gem_step_attributes_to_hdf5.py  gpt_hdf5_compound_type.cpp  gpt_occ_read_shape_attributes_in_step.cpp  occt_extract_products_in_step.cpp
